2001-03-25  Ryan Nunn <triforce@merlin.net.au>
	* Makefile.cygwin, Makefile.win32: Some changes for the tools. Also
	  fixed expack writing output to text files when using Makefile.cygwin.

2001-03-25  Jeff Freedman  <jeff@amy.nerble.net>

	* SI - Added 'camera_actor' to Game_window, and a usecode
	intrinsic that sets it.  Crystal ball is half-working (and then
	you're stuck in space!)

2001-03-23  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Makefile.cygwin: committed Travis' changes

2001-03-23  Jeff Freedman  <jeff@amy.nerble.net>

	* SI - Companions wait while you take the Test.  Grandfather clock
	animation fixed.  Books work.

2001-03-22  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/credits.txt: added Aurelien Marchand (Artaxerxes)
	* data/bg/: added subdir. with bg shapes
	* Makefile.*: build exult_bg.flx
	* tools/expack.cc: convert paths (unix->dos, unix->macos)

2001-03-21  Max Horn  <max@quendi.de>
	* FAQ, doc/faq/faq_html.xsl, doc/faq/exult_faq.xml: applied update made by Dominus

2001-03-21  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/bgfiredoom.shp: more art by Adam
	* data/flx.in, Makefile.*, gumps/Paperdoll_gump_info.cc: included art

2001-03-21  Ryan Nunn <triforce@merlin.net.au>
	* usecode/siintrinsics.h: Changed 0x44, 0x45, 0x46 to 0x45, 0x46, 0x47

2001-03-21  Jeff Freedman  <jeff@amy.nerble.net>

	* SI - Fixing bugs (and not necessarily successfully).

2001-03-20  Max Horn  <max@quendi.de>
	* acconfig.h: added MACOSX
	* animate.cc: added missing using std::map;
	* configure.in: added MacOS X
	* audio/Audio.cc: fixed Audio::play_wave_sfx which returned nothing
	  instead of an AudioID (this did break compilation on multiple systems)
	* conf/Makefile.am: added $(SYSLIBS) to confregress target
	* tools/shp2pcx.cc: fixed some type mistakes (used Uint32 instead
	  of uint32 which broke compilation on MacOS X)
	* tools/Makefile.am: added $(SYSLIBS) to expack & shp2pcx target

2001-03-20  Jeff Freedman  <jeff@amy.nerble.net>
