@@ -125,7 +125,7 @@
 	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0x58
 	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0x59	
 	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0x5a
-	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0x5b
+	USECODE_INTRINSIC_PTR(set_opponent),			// 0x5b
 	// End pack
 
 
